@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform{
}
class Freelancer {
  -String idF
  -String name
  -String levelExpertise
  -String email
  -String nif
  -String ibanAccount
  -String coutry
}

class Organization {
  -String nome
  -String email
  -String nif
}

class Collaborator{
  -String nome
  -String email
}

class Task {
  -String idT
  -String description
  -Time timeDuration
  -double costHour
  -String taskCategory
}


class TransactionExecution {
  -Data endDate
  -double delay
  -String descriptionOfQuality
}

class Address{
  -String street
  -String doorNumber
  -String city
}

class Administrator {
}



Freelancer "1" -- "1" TransactionExecution: receive >
Freelancer "1" -- "1" Address: has >

Task "1..*" -- "1" Freelancer: made by >

Platform "1" -- "1..*" TransactionExecution: has >
Platform "1" -- "1" Administrator: has >
Platform "1" -- "1..*" Organization: has registered >
Platform "1" -- "1..*" Freelancer: has >
Platform "1" -- "1" ImportFile : has

Organization "1" -- "1" Address: has >
Organization "1" -- "1" Collaborator: has >


Administrator "1" -- "1" Organization: registers >
Administrator "1" -- "1" Collaborator: registers >

TransactionExecution "1" -- "1" Task: has >


Collaborator "1" -- "1" Freelancer: creates >
Collaborator "1" -- "1..*" Task: creates >
Collaborator "1" -- "1..*" TransactionExecution: creates >

ImportFile "1" -- "1" Collaborator: used by




@enduml



